Marathi version first draft.

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -229,14 +229,14 @@ All rights reserved.
 % Bird sections
 \chapter{Birds}
 
-\birdentry{Brown Kite}{\textit{Milvus migrans}}
+\birdentry{Black Kite}{\textit{Milvus migrans}}
   {Kite size}
   {Very common resident}
-  {A large bird of prey with a distinctive forked tail and long wings. The plumage is mostly brown with lighter underparts.}
+  {A large bird of prey with a distinctive forked tail and long wings. The plumage is mostly blackish-brown with lighter underparts.}
   {Found throughout the Indian subcontinent, including the University of Pune campus.}
   {Often seen soaring high in the sky, searching for prey. Feeds on small mammals, birds, and carrion.}
   {Breeds December to April. Builds nests in tall trees, using sticks and other plant materials. Lays 2-3 whitish eggs with brown spots. Both parents incubate for about 30 days and care for young.}
-  {brown-kite.jpg}
+  {black-kite.jpg}
 
 \birdentry{Shikra}{\textit{Accipiter badius}}
   {Myna+}
