Update bird guide with new sections on birdwatching tips and seasonal highlights; modify existing content for clarity and detail.

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -115,7 +115,7 @@
       {\sffamily\bfseries Size:} #3 \\[0.5em]
       {\sffamily\bfseries Status:} #4 \\[0.5em]
       {\sffamily\bfseries Field characters:} #5 \\[0.5em]
-      {\sffamily\bfseries Distribution:} #6 \\[0.5em]
+      {\sffamily\bfseries Best seen at:} #6 \\[0.5em]
       {\sffamily\bfseries Habits:} #7 \\[0.5em]
       {\sffamily\bfseries Nesting:} #8
     \end{mdframed}
@@ -187,41 +187,90 @@ All rights reserved.
   The campus features diverse habitats that support a rich variety of birdlife. The landscape includes extensive wooded areas with native and exotic tree species, open grasslands, lawns, artificial water bodies, gardens, and building complexes. This mosaic of habitats provides excellent opportunities for both resident and migratory birds.
 
   \section*{Flora and Vegetation}
-  The university grounds host over 150 species of trees, creating a veritable urban forest. Native species like Banyan (\textit{Ficus benghalensis}), Peepal (\textit{Ficus religiosa}), and Neem (\textit{Azadirachta indica}) dominate the landscape, while ornamental and introduced species add to the diversity. This rich vegetation provides vital nesting sites, roosting areas, and food sources for various bird species.
+  The university grounds host over 150 species of trees, creating a veritable urban forest. Native species like Banyan (\textit{Ficus benghalensis}), Peepal (\textit{Ficus religiosa}), Neem (\textit{Azadirachta indica}), and Red Silk Cotton (\textit{Bombax ceiba}) dominate the landscape, while ornamental and introduced species like African Blackwood (\textit{Dalbergia melanoxylon}), Rain Tree (\textit{Samanea saman}), Gulmohar (\textit{Delonix regia}), and Copper Pod (\textit{Peltophorum pterocarpum}) add to the diversity. This rich vegetation provides vital nesting sites, roosting areas, and food sources for various bird species.
 }{%
-  \section*{Water Resources}
-  Water bodies on campus play a crucial role in supporting bird populations. These include:
-  \begin{itemize}
-  \item A large artificial reservoir that serves as the main campus lake
-  \item Several small ponds and water features scattered throughout the grounds
-  \item Seasonal water accumulations during the monsoon period
-  \end{itemize}
-
+   
   \section*{Human Impact}
   The campus ecosystem faces various anthropogenic pressures that affect bird populations:
   \begin{itemize}
   \item Regular vehicular movement along campus roads
   \item Ongoing construction and development activities
-  \item Presence of a large student population (over 40,000)
+  \item Presence of a large student population
   \item Regular maintenance activities including gardening and landscaping
-  \item Noise pollution from nearby urban areas
+  \item Noise and dust pollution from nearby urban areas
   \item Light pollution from campus buildings and facilities
   \end{itemize}
 }
 
 \introsection{%
-  \section*{Conservation Efforts}
-  The university administration has implemented several measures to protect and enhance campus biodiversity:
+  \section*{When to Watch}
+  \textbf{Time of Day:}
   \begin{itemize}
-  \item Establishment of designated quiet zones
-  \item Protection of wooded areas and mature trees
-  \item Restricted access to sensitive wildlife habitats
-  \item Regular monitoring of bird populations
-  \item Environmental awareness programs for students and staff
+  \item Early morning (6:00-9:00 AM): Peak activity as birds forage for breakfast
+  \item Late afternoon (4:00-6:30 PM): Second wave of feeding activity
+  \item Midday: Good for watching raptors soaring on thermal currents
+  \item Dusk: Best time to spot nocturnal species like owls becoming active
+  \end{itemize}
+
+  \textbf{Seasonal Highlights:}
+  \begin{itemize}
+  \item Winter (November-February): Peak season with numerous winter visitors
+  \item Monsoon (June-September): Best for watching breeding activities
+  \item Summer (March-May): Good for observing resident breeding birds
+  \item Post-monsoon (October): Opportunity to spot passage migrants
   \end{itemize}
 }{%
+  \section*{Acknowledgments}
+  Special thanks to the dedicated birdwatchers 
+  who have contributed extensively to documenting 
+  the avifauna of SPPU campus through eBird 
+(\href{https://ebird.org/hotspot/L1838309}{SPPU eBird Hotspot}).
+   
+  Their systematic observations have greatly enhanced our 
+  understanding of bird diversity and seasonal patterns 
+  on campus.
+}
+
+\introsection{%
+  \section*{How to Watch}
+  \textbf{Essential Equipment:}
+  \begin{itemize}
+  \item Binoculars: 8x42 or 10x42 recommended for beginners
+  \item Field guide: \textit{Birds of the Indian Subcontinent} by Grimmett, Inskipp \& Inskipp
+  \item Notebook for recording observations
+  \end{itemize}
+
+  \textbf{Useful Apps:}
+  \begin{itemize}
+  \item eBird: For recording sightings and exploring hotspots
+  \item Merlin Bird ID: Helps identify birds through photos or sounds
+  \item BirdNet: AI-powered bird sound identification
+  \end{itemize}
+}{%
+  \section*{More Tips}
+  \begin{itemize}
+  \item Wear earth-toned clothing to blend with surroundings
+  \item Move slowly and quietly to avoid startling birds
+  \item Avoid using flash photography
+  \item Keep a safe distance from nests and breeding areas
+  \item Record your observations in eBird after each session
+  \end{itemize}
+}
+
+\introsection{%
   \section*{About This Guide}
-  This field guide documents the diverse bird species found within the university campus. Each entry includes detailed information about the bird's appearance, behavior, and habitat preferences, accompanied by high-quality photographs. The nomenclature follows current taxonomic standards, with references to the comprehensive Book of Indian Birds (\href{https://archive.org/download/BookOfIndianBirds/BookIndianBirds.pdf}{available online}) and updates from \href{https://indianbirds.in/pdfs/IB_11_5_6_Final.pdf}{Indian Birds} journal.
+  This field guide documents the diverse bird species 
+  found within the university campus. The most common 
+  species, which represent about half the bird species 
+  recorded on campus, are included here.
+  
+  Each entry includes 
+  detailed information about the bird's appearance, 
+  behavior, and habitat preferences, 
+  accompanied by high-quality photographs. 
+  The nomenclature follows current taxonomic standards, 
+  with both scientific and common names provided for 
+  easy reference.
 }
 
 \vspace{1cm}
@@ -615,6 +664,15 @@ All rights reserved.
   {Active at dawn and dusk. Bobs head when alert. Feeds on insects, small vertebrates.}
   {Breeds February to April. Nests in tree hollows and old buildings. Lays 3-5 white eggs. Female incubates for 28-30 days while male provides food.}
   {spotted-owlet.jpg}
+
+\birdentry{Indian Grey Hornbill}{\textit{Ocyceros birostris}}
+  {Crow}
+  {Common resident}
+  {Large grey bird with long tail and distinctive casque on bill. Female has smaller casque.}
+  {Found in wooded areas across campus with large old trees.}
+  {Usually seen in pairs, moving from tree to tree. Feeds mainly on fruits, especially figs.}
+  {Breeds March to June. Female seals herself in tree cavity, leaving narrow slit through which male feeds her and chicks. Lays 2-4 white eggs.}
+  {indian-grey-hornbill.jpg}
 
 \birdentry{Indian Roller}{\textit{Coracias benghalensis}}
   {Myna++}
